--- a/Views/editproducts.ejs
+++ b/Views/editproducts.ejs
@@ -1,9 +1,71 @@
 <!DOCTYPE html>
 <html>
+<!DOCTYPE html>
+<html>
+
 <head>
-  <title>Edit Product</title>
-</head>
+    <title>Products List</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+     <title>Edit Product</title>
+     </head>
+
+    <style>
+        body {
+            background-color: black;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        h1 {
+            font-size: 32px;
+            text-align: center;
+            color: #eb9e10;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        th,
+        td {
+            padding: 10px;
+            text-align: left;
+            border-bottom: 1px solid #eb9e10;
+        }
+
+        th {
+            background-color: #eb9e10;
+            font-weight: bold;
+        }
+
+        td {
+            background-color: #fff;
+        }
+
+        tr.r:hover {
+            color: #eb9e10;
+        }
+        button.btn{
+			background-color: #eb9e10;
+			border-radius: 25px;
+			margin-bottom: 10px;
+			border: #fff;
+		}
+		button.btn:hover{
+			background-color: #242323;
+			color: #eb9e10;
+		}
+    </style>
+    </script>
 <body>
+<%- include("./partials/nav.ejs") %>
   <h1>Edit Product</h1>
   
   <% if (user && user.Type === 'admin') { %>
