--- a/Views/Add_Product.ejs
+++ b/Views/Add_Product.ejs
@@ -19,6 +19,7 @@
 			margin-top: 100px;
 			color: #eb9e10;
 			border-radius: 25px;
+			padding: 20px;
 		}
 		button.btn{
 			background-color: #eb9e10;
@@ -35,7 +36,7 @@
 <body>
 	<%- include("./partials/Nav.ejs") %>
 	<div class="container">
-		<h1>Add Product</h1>
+		<h1 class="text-center">Add Product</h1>
 		<form id="edit-product-form" method="post" action="">
 			<div class="form-group">
 				<label for="product-name">Product Name:</label>
