--- a/Views/404.ejs
+++ b/Views/404.ejs
@@ -7,13 +7,22 @@
       h1 {
         color: #c58308;
       }
+
+      /* Responsive Styles */
+      @media only screen and (max-width: 600px) {
+        /* Adjust margin and padding for smaller screens */
+        body {
+          margin: 0;
+          padding: 20px;
+        }
+      }
     </style>
   </head>
   <body>
     <%- include("./partials/Nav.ejs") %>
     <div>
       <br /><br /><br /><br />
-      <center><h1>so sorry,this page is not found :)</h1></center>
+      <center><h1>so sorry, this page is not found :)</h1></center>
     </div>
   </body>
 </html>
