--- a/Views/Cart.ejs
+++ b/Views/Cart.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,293 +16,331 @@
 
     <script src="https://kit.fontawesome.com/3929e16ef5.js" crossorigin="anonymous"></script>
     <script src="{% static 'network/functions.js' %}"></script>
-    
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Spartan", sans-serif;
-}
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: "Spartan", sans-serif;
+        }
 
-html {
-    scroll-behavior: smooth;
-}
+        html {
+            scroll-behavior: smooth;
+        }
 
-h1 {
-    font-size: 50px;
-    line-height: 64px;
-    color: #222;
-}
+        h1 {
+            font-size: 50px;
+            line-height: 64px;
+            color: #222;
+        }
 
-h2 {
-    font-size: 46px;
-    line-height: 54px;
-    color: #222;
-}
+        h2 {
+            font-size: 46px;
+            line-height: 54px;
+            color: #222;
+        }
 
-h4 {
-    font-size: 20px;
-    color: #222;
-}
+        h4 {
+            font-size: 20px;
+            color: #222;
+        }
 
-h6 {
-    font-weight: 700;
-    font-size: 12px;
-}
+        h6 {
+            font-weight: 700;
+            font-size: 12px;
+        }
 
-p {
-    font-size: 16px;
-    color: #465b52;
-    margin: 15px 0 20px 0;
-}
+        p {
+            font-size: 16px;
+            color: #465b52;
+            margin: 15px 0 20px 0;
+        }
 
-.section-p1 {
-    padding: 40px 80px;
-}
+        .section-p1 {
+            padding: 40px 80px;
+        }
 
-body {
-    width: 100%;
+        body {
+            width: 100%;
+        }
 
-}
+        #header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 20px 80px;
+            background-color: #000000;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+            z-index: 999;
+            position: sticky;
+            top: 0;
+            left: 0;
+        }
 
-#header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 80px;
-    background-color: #000000;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
-    z-index: 999;
-    position: sticky;
-    top: 0;
-    left: 0;
+        #header .logo {
+            text-decoration: none;
+            font-size: 16px;
+            font-weight: 600;
+            color: #fffcfc;
+            font-family: Serif;
+        }
 
-}
+        #navbar {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
 
-#header .logo {
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 600;
-    color: #fffcfc;
-    font-family: Serif;
-}
+        #navbar li {
+            list-style: none;
+            padding: 0 20px;
+            position: relative;
+        }
 
-#navbar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+        #navbar li a {
+            text-decoration: none;
+            font-size: 16px;
+            font-weight: 600;
+            color: #fffcfc;
+            transition: 0.3s ease;
+        }
 
-#navbar li {
-    list-style: none;
-    padding: 0 20px;
-    position: relative;
+        #navbar li a.cart {
+            color: #eb9e10;
+        }
 
-}
+        #navbar li a:hover,
+        #navbar li a.active {
+            color: #eb9e10;
+        }
 
-#navbar li a {
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 600;
-    color: #fffcfc;
-    transition: 0.3s ease;
-}
+        #navbar li a.active::after,
+        #navbar li a:hover::after {
+            content: "";
+            width: 30%;
+            height: 2px;
+            background-color: #eb9e10;
+            position: absolute;
+            bottom: -4px;
+            left: 20px;
+        }
 
-#navbar li a.cart {
-    color: #eb9e10;
-}
+        table {
+            border-collapse: collapse;
+            width: 95%;
+            table-layout: fixed;
+            border: 2px solid black;
+            margin-left: auto;
+            margin-right: auto;
+        }
 
-#navbar li a:hover,
-#navbar li a.active {
-    color: #eb9e10;
-}
+        tr.r:hover {
+            color: #eb9e10;
+        }
 
-#navbar li a.active::after,
-#navbar li a:hover::after {
-    content: "";
-    width: 30%;
-    height: 2px;
-    background-color: #eb9e10;
-    position: absolute;
-    bottom: -4px;
-    left: 20px;
-}
+        th {
+            font-weight: 700;
+            text-align: left;
+            background: #eb9e10;
+            color: #000000;
+            border: #eb9e10;
+            padding: 6px 0;
+            border-bottom: 1px solid #000000;
+        }
 
-table {
-    border-collapse: collapse;
-    width: 95%;
-    table-layout: fixed;
-    border: 2px solid black;
-    margin-left: auto;
-    margin-right: auto;
-}
+        td {
+            background-color: #ffffff;
+            color: #000000;
+            text-align: center;
+            padding: 10px;
+            text-align: left;
+            border-bottom: 1px solid #eb9e10;
+        }
 
-tr.r:hover {
-    color: #eb9e10;
-}
+        .coupon {
+            text-align: left;
+            padding: 10px;
+        }
 
-th {
-    font-weight: 700;
-    text-align: left;
-    background: #eb9e10;
-    color: #000000;
-    border: #eb9e10;
-    padding: 6px 0;
-    border-bottom: 1px solid #000000;
-}
+        .table2 {
+            width: 40%;
+            margin-left: 37px;
+            float: left
+        }
 
-td {
-    background-color: #ffffff;
-    color: #000000;
-    text-align: center;
-    padding: 10px;
-    text-align: left;
-    border-bottom: 1px solid #eb9e10;
-}
+        .code {
+            text-align: center;
+            padding: 15px;
+            margin: 5px;
+            background-color: white;
+        }
 
-.coupon {
-    text-align: left;
-    padding: 10px;
-}
+        .buttonss {
+            text-align: center;
+            border-radius: 15px;
+            padding: 15px;
+            margin: 5px;
+            background-color: white;
+        }
 
-.table2 {
-    width: 40%;
-    margin-left: 37px;
-    float: left
-}
+        .buttonss:hover {
+            background-color: #eb9e10;
+            color: white;
+        }
 
-.code {
-    text-align: center;
-    padding: 15px;
-    margin: 5px;
-    background-color: white;
-}
+        .table3 {
+            width: 50%;
+            float: right;
+            margin-right: 37px;
+            margin-bottom: 10px;
+        }
 
-.buttonss {
-    text-align: center;
-    border-radius: 15px;
-    padding: 15px;
-    margin: 5px;
-    background-color: white;
-}
+        .header {
+            text-align: left;
+            padding: 10px;
+        }
 
-.buttonss:hover {
-    background-color: #eb9e10;
-    color: white;
-}
+        .price {
+            text-align: right;
+            padding: 10px;
+        }
 
-.table3 {
-    width: 50%;
-    float: right;
-    margin-right: 37px;
-    margin-bottom: 10px;
-}
+        tr:hover {
+            background-color: darkgrey;
+        }
 
-.header {
-    text-align: left;
-    padding: 10px;
-}
+        .trash {
+            width: 40;
+            height: 25px;
+        }
 
-.price {
-    text-align: right;
-    padding: 10px;
-}
+        /* Responsive styles */
+        @media (max-width: 768px) {
+            /* Adjust header padding */
+            #header {
+                padding: 10px 20px;
+            }
 
-tr:hover {
-    background-color: darkgrey;
-}
+            /* Center align the logo */
+            #header .logo {
+                text-align: center;
+            }
 
-.trash {
-    width: 40;
-    height: 25px;
-}
+            /* Adjust table width */
+            table {
+                width: 100%;
+            }
+
+            /* Adjust table font sizes */
+            th,
+            td {
+                font-size: 14px;
+            }
+
+            /* Make the coupon section full width */
+            .coupon {
+                width: 100%;
+                margin-left: 0;
+                margin-right: 0;
+            }
+
+            /* Adjust table2 and table3 widths */
+            .table2,
+            .table3 {
+                width: 100%;
+                margin-left: 0;
+                margin-right: 0;
+            }
+        }
     </style>
 
 </head>
+
 <body>
-        <%- include("./partials/Nav.ejs") %>
-        <br>
-        <section>
-            <table id= "t1"class="table">
+    <%- include("./partials/Nav.ejs") %>
+    <br>
+    <section>
+        <table id="t1" class="table">
+            <tr>
+                <th>Remove</th>
+                <th>Product</th>
+                <th>Size</th>
+                <th>Price</th>
+                <th>Quantity</th>
+                <th>Total</th>
+            </tr>
+
+            <% if (carts.length > 0) { %>
+            <% carts.forEach(crt=> { %>
+            <div onclick="" class="pro">
                 <tr>
-                    <th>Remove</th>
-                    <th>Product</th>
-                    <th>Size</th>
-                    <th>Price</th>
-                    <th>Quantity</th>
-                    <th>Total</th>
+                    <td>
+                        <form action="/remove_from_cart" method="post" id="remove_from_cart">
+                            <input hidden id="pname" name="pname" value="<%= crt.ProductName%>"></input>
+                            <input hidden id="psize" name="psize" value="<%= crt.Size%>"></input>
+                            <input value="remove" type="submit"></input>
+
+                        </form>
+
+
+                    </td>
+                    <td><%= crt.ProductName%></td>
+                    <td><%= crt.Size%></td>
+                    <td><%= crt.Price%> EGP</td>
+                    <td><%= crt.Quantity %></td>
+                    <td><%= crt.Price * crt.Quantity %> EGP</td>
                 </tr>
 
-                <% if (carts.length> 0) { %>
-                    <% carts.forEach(crt=> { %>
-                            <div onclick="" class="pro">
-                                <tr>
-                                    <td>
-                                        <form action="/remove_from_cart" method="post" id="remove_from_cart">
-                                           <input hidden id="pname"  name="pname" value="<%= crt.ProductName%>"></input>
-                                           <input hidden id="psize" name="psize" value="<%= crt.Size%>"></input>
-                                           <input value="remove" type="submit"></input>
-                                                                             
-                                        </form>
+                <% }) %>
+                <% } else { %>
+                <p>.</p>
+                <% } %>
+        </table>
+    </section>
+    <br>
+    <section>
+        <table class="table3" id="t3">
+            <tr>
+                <th class="header" colspan="5">CART TOTAL</th>
+            </tr>
+            <tr>
+                <td class="header">subtotal</td>
+                <td id="sub_tot" class="price" colspan="4"></td>
+            </tr>
+            <tr>
+                <td class="header">shipping</td>
+                <td class="price" colspan="4">50</td>
+            </tr>
+            <tr>
+                <td style="border-top: 1px solid #000;" class="header">Total</td>
+                <td id="tot" style="border-top: 1px solid #000;" class="price" colspan="4"></td>
+            </tr>
+            <tr>
+                <form action="/Checkout" method="post" id="Checkout">
+                    <input hidden name="carts" value="<%= carts%>"></input>
+                    <td colspan="5"><input value="Proceed to checkout" type="submit"></input></td>
+                </form>
 
-                                        
-                                    </td>
-                                     <td> <%= crt.ProductName%></td>
-                                     <td><%= crt.Size%></td>
-                                     <td><%= crt.Price%> EGP</td>
-                                     <td><%= crt.Quantity %></td>
-                                     <td><%= crt.Price*crt.Quantity %> EGP</td>
-                                 </tr>
-                                
-                            <% }) %>
-                                <% } else { %>
-                                    <p>.</p>
-                                    <% } %>
-            </table>
-        </section>
-        <br>
-         <section >
-                <table class="table3" id="t3">
-                    <tr>
-                        <th class="header" colspan="5"> CART TOTAL</th>
-                    </tr>
-                    <tr>
-                     <td class="header" >subtotal</td>
-                     <td id="sub_tot" class="price" colspan="4"></td>
-                    </tr>
-                    <tr>
-                        <td class="header" >shipping</td>
-                        <td class="price"colspan="4">50</td>
-                    </tr>
-                    <tr>
-                        <td style="border-top: 1px solid #000;" class="header" >Total</td>
-                        <td id="tot" style="border-top: 1px solid #000;"class="price"colspan="4"></td>
-                    </tr>
-                    <tr>
-                        <form action="/Checkout" method="post" id="Checkout">
-                            <input hidden name="carts" value="<%= carts%>"></input>
-                            <td  colspan="5"><input value="Proceed to checkout" type="submit"></input></td>
-                        </form>
-                        
-                    </tr>
-                </table>
-         </section>
-         
-    </body>
-    <script>
-        var table = document.getElementById("t1");
-        sumVal = 0;
-        for (var i = 1; i < table.rows.length; i++) {
-          sumVal = sumVal + parseFloat(table.rows[i].cells[5].innerHTML);
-        }
-        document.getElementById("sub_tot").innerHTML = sumVal;
-        document.getElementById("sub_tot").value = sumVal;
+            </tr>
+        </table>
+    </section>
 
-        document.getElementById("tot").innerHTML = sumVal + 50;
-        
-        </script>
-    
-    </html>
+</body>
+
+<script>
+    var table = document.getElementById("t1");
+    sumVal = 0;
+    for (var i = 1; i < table.rows.length; i++) {
+        sumVal = sumVal + parseFloat(table.rows[i].cells[5].innerHTML);
+    }
+    document.getElementById("sub_tot").innerHTML = sumVal;
+    document.getElementById("sub_tot").value = sumVal;
+
+    document.getElementById("tot").innerHTML = sumVal + 50;
+
+</script>
+
+</html>
