--- a/Views/partials/Nav.ejs
+++ b/Views/partials/Nav.ejs
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <link rel="stylesheet" href="/CSS/Nav.css">
     <style>
@@ -32,6 +33,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap; /* Added flex-wrap */
 }
 
 #navbar li {
@@ -47,13 +49,6 @@
     font-weight: 600;
     color: #fffcfc;
     transition: 0.3s ease;
-}
-
-
-
-#navbar li a:hover,
-#navbar li a.active {
-    color: #eb9e10;
 }
 
 #navbar li a.active::after,
@@ -99,6 +94,12 @@ li.name{
                      <li> <a href='/logout'>Logout</a></li>
                      <li class="name"> Welcome <%= user.Name %></li>
                       <% } %>
+                      <li>
+                        <form action="/search" method="GET">
+                            <input type="text" name="query" placeholder="Search products...">
+                            <button type="submit">Search</button>
+                        </form>
+                    </li>
                 </div>
             </ul>
         </div>
