--- a/Views/Admin_Products_List.ejs
+++ b/Views/Admin_Products_List.ejs
@@ -104,7 +104,7 @@
                     <form action="/deleteP" method="POST">
                         <button type="submit" name="id" value="<%= emp._id %>">Delete</button>
                     </form>
-                    <a href="/edit/<%= emp._id %>">Edit</a>
+                    <a href="/editp/<%= emp._id %>">Edit</a>
                 </td>
             </tr>
             <% }) %>
