--- a/Views/editproducts.ejs
+++ b/Views/editproducts.ejs
@@ -68,36 +68,23 @@
 <%- include("./partials/nav.ejs") %>
   <h1>Edit Product</h1>
   
-  <% if (user && user.Type === 'admin') { %>
-    <% if (product) { %>
-      <form action="/editp/<%= product._id %>" method="POST" enctype="multipart/form-data">
+      <form action="/editp/<%= pproduct._id %>" method="POST" enctype="multipart/form-data">
         <div>
           <label for="product-Name">Product Name:</label>
-          <input type="text" id="product-Name" name="product-Name" value="<%= product.Product-Name %>">
+          <input type="text" id="product-Name" name="Name" value="<%= pproduct.ProductName%>">
         </div>
         <div>
             <label for="product-Description">Product Description:</label>
-            <textarea id="product-Description" name="product-Description"> value="<%= product.Description %>"</textarea>
+            <input type="text" id="product-Description" name="Description" value="<%= pproduct.Description %>">
           </div>
         <div>
           <label for="product-Price">Product Price:</label>
-          <input type="number" id="product-Price" name="product-Price" value="<%= product.Price %>">
+          <input type="number" id="product-Price" name="Price" value="<%= pproduct.Price %>">
         </div>
-        <div>
-            <label for="product-Image">Product Image:</label>
-            <input type="file" id="product-Image" name="product-Image">
-          </div>
-        <div>
           <label for="product-Quantity">Product Quantity:</label>
-          <input type="number" id="product-Quantity" name="product-Quantity" value="<%= product.Quantity %>">
+          <input type="number" id="product-Quantity" name="Quantity" value="<%= pproduct.Quantity %>">
         </div>  
         <button type="submit">Update Product</button>
       </form>
-    <% } else { %>
-      <p>Product not found</p>
-    <% } %>
-  <% } else { %>
-    <p>You are not authorized to edit products</p>
-  <% } %>
 </body>
 </html>
