--- a/Views/editproducts.ejs
+++ b/Views/editproducts.ejs
@@ -68,6 +68,7 @@
           <input type="number" id="product-Quantity" name="Quantity" value="<%= pproduct.Quantity %>">
         </div>  
         <button type="submit">Update Product</button>
+        <a href="/">Cancel</a>
       </form>
     </div>
 </body>
