--- a/Views/editproducts.ejs
+++ b/Views/editproducts.ejs
@@ -66,9 +66,11 @@
         </div>
           <label for="product-Quantity">Product Quantity:</label>
           <input type="number" id="product-Quantity" name="Quantity" value="<%= pproduct.Quantity %>">
-        </div>  
+        </div>
+        <div> 
         <button type="submit">Update Product</button>
         <a href="/">Cancel</a>
+        </div> 
       </form>
     </div>
 </body>
