--- a/Views/editproducts.ejs
+++ b/Views/editproducts.ejs
@@ -4,74 +4,79 @@
 <html>
 
 <head>
-    <title>Products List</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-     <title>Edit Product</title>
-     </head>
-     <style>
-      .user-edit-sheet {
-          background-color: #eb9e10;
-          border: 1px solid #000000;
-          border-radius: 5px;
-          padding: 20px;text-align: center;
+  <title>Products List</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <title>Edit Product</title>
+</head>
+<style>
+  .user-edit-sheet {
+    background-color: #eb9e10;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    padding: 20px;
+    text-align: center;
 
-      }
-      
-      .user-edit-sheet h2 {
-          margin-top: 0;
-          text-align: center;
-          text-decoration: underline;
-      }
+  }
 
-      .form-group {
-          margin-bottom: 10px;
-      }
+  .user-edit-sheet h2 {
+    margin-top: 0;
+    text-align: center;
+    text-decoration: underline;
+  }
 
-      .form-group label {
-          display: inline-block;
-          width: 100px;
-          font-weight: bold;
-      }
+  .form-group {
+    margin-bottom: 10px;
+  }
 
-      .form-group input,
-      .form-group select {
-          display: inline-block;
-          width: 200px;
-      }
+  .form-group label {
+    display: inline-block;
+    width: 100px;
+    font-weight: bold;
+  }
 
-      .form-group button {
-          margin-right: 10px;
-      }
-  </style>
-   
-    </script>
+  .form-group input,
+  .form-group select {
+    display: inline-block;
+    width: 200px;
+  }
+
+  .form-group button {
+    margin-right: 10px;
+  }
+</style>
+
+</script>
+
 <body>
-<%- include("./partials/nav.ejs") %>
-<div class="user-edit-sheet">
-  <h1>Edit Product</h1>
-  
+  <%- include("./partials/nav.ejs") %>
+    <div class="user-edit-sheet">
+      <h1>Edit Product</h1>
+
       <form class="ab" action="/editp/<%= pproduct._id %>" method="POST" enctype="multipart/form-data">
         <div class="form-group">
           <label for="product-Name">Product Name:</label>
           <input type="text" id="product-Name" name="Name" value="<%= pproduct.ProductName%>">
         </div>
-        <div>
-            <label for="product-Description">Product Description:</label>
-            <input type="text" id="product-Description" name="Description" value="<%= pproduct.Description %>">
-          </div>
+        <div >
+          <label for="product-Description">Product Description:</label>
+          <input type="text" id="product-Description" name="Description" value="<%= pproduct.Description %>">
+        </div>
         <div>
           <label for="product-Price">Product Price:</label>
           <input type="number" id="product-Price" name="Price" value="<%= pproduct.Price %>">
         </div>
-          <label for="product-Quantity">Product Quantity:</label>
-          <input type="number" id="product-Quantity" name="Quantity" value="<%= pproduct.Quantity %>">
+        <label for="product-Quantity">Product Quantity:</label>
+        <input type="number" id="product-Quantity" name="Quantity" value="<%= pproduct.Quantity %>">
+        <div class="form-group">
+          <button type="submit">Update Product</button>
+          <a href="/">Cancel</a>
         </div>
-        <div> 
-        <button type="submit">Update Product</button>
-        <a href="/">Cancel</a>
-        </div> 
-      </form>
+        </form>
+        </div>
+
     </div>
+    
 </body>
+
 </html>
