--- a/Views/editproducts.ejs
+++ b/Views/editproducts.ejs
@@ -58,11 +58,11 @@
           <label for="product-Name">Product Name:</label>
           <input type="text" id="product-Name" name="Name" value="<%= pproduct.ProductName%>">
         </div>
-        <div >
+        <div class="form-group">
           <label for="product-Description">Product Description:</label>
           <input type="text" id="product-Description" name="Description" value="<%= pproduct.Description %>">
         </div>
-        <div>
+        <div class="form-group">
           <label for="product-Price">Product Price:</label>
           <input type="number" id="product-Price" name="Price" value="<%= pproduct.Price %>">
         </div>
