--- a/Views/Edit_Users.ejs
+++ b/Views/Edit_Users.ejs
@@ -65,7 +65,7 @@
                 <label for="user-role">Role:</label>
                 <select id="user-role" name="type" value="<%= Puser.Type%>" >
                     <option >Select a role</option>
-                    <option value="admin">client</option>
+                    <option value="admin">admin</option>
                     <option value="customer">Customer</option>
                 </select>
             </div>
