--- a/Views/partials/Nav.ejs
+++ b/Views/partials/Nav.ejs
@@ -79,7 +79,7 @@ li.name{
             <ul id="navbar">
                 <li><a class="home" href="/">Home</a></li>
                 <li><a href="Product">Shop</a></li>
-               <% if(user.Type==="client"){ %>
+               <% if(user.Type==="admin"){ %>
                <li> <a href='/AddminM'>Admin</a></li>
                 <% } %>
 
