--- a/Views/Item.ejs
+++ b/Views/Item.ejs
@@ -183,109 +183,50 @@
     }
 </style>
 </head>
-
 <body>
     <%- include("./partials/Nav.ejs") %>
     <section class="container sproduct">
+        <% if (products.length> 0) { %>
+            <% products.forEach(prod=> { %>
         <div class="row mt-5">
-            <% if (products.length> 0) { %>
-                <% products.forEach(prod=> { %>
             <div class="col-lg-5 col-md-12 col-12 pb-1">
-                <img class="r img-fluid w-100" src="/Images/<%= prod.ProductName%>.png">
+                <img class="r img-fluid w-100" src="/Images/<%= prod.Image %>" width="100">
             </div>
-            
-            <section class="tt" style="margin-left: 300px;">
-                
-                    <div class="col-lg-6 col-md-12 col-1h6">
-                        <h1 class="py-4"><%= prod.ProductName%></h3>
-                        <h3>Price: <%= prod.Price%> EGP</h2>
-                        <h4>Size: <%= prod.Size%></p>
-                    <form action="/add_to_cart" method="post" id="add_to_cart">
-                                <input class="py-4" name="pname"value ="<%= prod.ProductName%>" hidden></input>
-                                <input name="pprice" value="<%= prod.Price%>" hidden></input>
-                                <input class="se" name="psize" value="<%= prod.Size%>" hidden >Quantity:</input>
-                                <input name="pquantity" value="1">
-
-                                    
-                        <input class="buy-button"  type="submit" onclick="" value="add to cart !"/></input>
-                    </form>
-                    
+            <section class="tt">
+                <div class="col-lg-6 col-md-12 col-1h6">
+                    <h3 class="py-4">Men's Fashion T-Shirt</h3>
+                    <h2><%= prod.Price%> LE</h2>
+                    <select class="se">
+                        <option>select Size</option>
+                        <option>S</option>
+                        <option>M</option>
+                        <option>L</option>
+                        <option>XL</option>
+                    </select>
+                    <input type="number" value="1">
+                    <div class="h_container">
+                        <i id="heart2" class="far fa-heart"></i>
+                    </div>
+                    <button class="buy-button">Add To Cart</button>
                     <h4 class="q">Product Details</h4>
-                    <span>
-                        <%= prod.Description%>
-                    </span>
-                    <% }) %>
-                                        <% } else { %>
-                                            <p>.</p>
-                                            <% } %>
-
+                    <span><%= prod.Description%></span>
+                    <form action="/add_to_cart" method="post" id="add_to_cart">
+                        <input class="py-4" name="pname"value ="<%= prod.ProductName%>" hidden></input>
+                        <input name="pprice" value="<%= prod.Price%>" hidden></input>
+                        <input class="se" name="psize" value="<%= prod.Size%>" hidden >Quantity:</input>
+                        <input name="pquantity" value="1">    
+                <input class="buy-button"  type="submit" onclick="" value="add to cart !"/></input>
+            </form>
 
                 </div>
             </section>
         </div>
+        <% }) %>
+        <% } else { %>
+            <p>.</p>
+            <% } %>
     </section>
     <br>
     <hr>
-    <section id="product1" class="section-p1" style="margin-left: 100dp;">
-        <hr>
-    </section>
-    <section class="foot">
-        <footer class="site-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 col-md-6">
-                        <h6>About</h6>
-                        <p class="text-justify">Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative to help
-                            the upcoming programmers with the code. Scanfcode focuses on providing the most efficient
-                            code or snippets as the code wants to be simple. We will help programmers build up concepts
-                            in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap,
-                            JavaScript, PHP, Android, SQL and Algorithm.</p>
-                    </div>
-
-                    <div class="col-xs-6 col-md-3">
-                        <h6>Categories</h6>
-                        <ul class="footer-links">
-                            <li><a href="http://scanfcode.com/category/c-language/">C</a></li>
-                            <li><a href="http://scanfcode.com/category/front-end-development/">UI Design</a></li>
-                            <li><a href="http://scanfcode.com/category/back-end-development/">PHP</a></li>
-                            <li><a href="http://scanfcode.com/category/java-programming-language/">Java</a></li>
-                            <li><a href="http://scanfcode.com/category/android/">Android</a></li>
-                            <li><a href="http://scanfcode.com/category/templates/">Templates</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col-xs-6 col-md-3">
-                        <h6>Quick Links</h6>
-                        <ul class="footer-links">
-                            <li><a href="http://scanfcode.com/about/">About Us</a></li>
-                            <li><a href="http://scanfcode.com/contact/">Contact Us</a></li>
-                            <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Contribute</a></li>
-                            <li><a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a></li>
-                            <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <hr>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-sm-6 col-xs-12">
-                        <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by
-                            <a href="#">Scanfcode</a>.
-                        </p>
-                    </div>
-
-                    <div class="col-md-4 col-sm-6 col-xs-12">
-                        <ul class="social-icons">
-                            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </footer>
-    </section>
 </body>
 </html>
