--- a/Views/err.ejs
+++ b/Views/err.ejs
@@ -1,12 +1,36 @@
 <html lang="en">
+  <head>
+ <title>error</title>
+ <link rel="stylesheet" href="err.css">
+    <style>
+      body {
+        background-color: dimgrey;
+      }
+      h1 {
+        color: #c58308;
+      }
+
+      /* Responsive Styles */
+      @media only screen and (max-width: 600px) {
+        /* Adjust margin and padding for smaller screens */
+        body {
+          margin: 0;
+          padding: 20px;
+        }
+      }
+    </style>
+  </head>
+
 
 <body>
   <%- include("./partials/nav.ejs") %>
 
     <div>
+    <br /><br /><br /><br />
       <h1><%= err %></h1>
     </div>
 
 </body>
 
 </html>
+
