--- a/Views/Add_Product.ejs
+++ b/Views/Add_Product.ejs
@@ -58,6 +58,10 @@
 				<label for="product-name">Product Description:</label>
 				<input type="text" class="form-control" id="product-desc" name="pdescription" placeholder="Enter product description" required>
 			</div>
+			<div>
+				<label for="product-name">Product SHort Description:</label>
+				<input type="text" class="form-control" id="product-sdesc" name="psdescription" placeholder="Enter short description" required>
+			</div>
 			<div class="form-group">
 				<label for="product-name">Product image</label>
 				<input type="file" class="form-control" id="product-img" name="img">
