--- a/Views/editproducts.ejs
+++ b/Views/editproducts.ejs
@@ -62,6 +62,10 @@
           <label for="product-Description">Product Description:</label>
           <input type="text" id="product-Description" name="Description" value="<%= pproduct.Description %>">
         </div>
+        <div>
+          <label for="product-Description">Product Description:</label>
+          <input type="text" id="product-Description" name="psdescription" value="<%= pproduct.Smalldesc %>">
+        </div>
         <div class="form-group">
           <label for="product-Price">Product Price:</label>
           <input type="number" id="product-Price" name="Price" value="<%= pproduct.Price %>">
