--- a/Views/Cart.ejs
+++ b/Views/Cart.ejs
@@ -281,7 +281,7 @@
                         <form action="/remove_from_cart" method="post" id="remove_from_cart">
                             <input hidden id="pname" name="pname" value="<%= crt.ProductName%>"></input>
                             <input hidden id="psize" name="psize" value="<%= crt.Size%>"></input>
-                            <input value="remove" type="submit"></input>
+                            <input value="remove" type="submit" value="<%= crt._id%>"></input>
 
                         </form>
 
