--- a/Views/partials/Nav.ejs
+++ b/Views/partials/Nav.ejs
@@ -89,7 +89,7 @@ li.name{
                 <li><a href="WishList"><i id="heart" class="far fa-heart"></i></a></li>
                 <li><a href="Cart"><i class="material-icons">shop</i></a></li>
                 <% if(user ==="" ) { %>
-                   <li> <a href='/Login2'>Login</a></li>
+                   <li> <a href='/user/Login2'>Login</a></li>
                     <% } else { %>
                      <li> <a href='/logout'>Logout</a></li>
                      <li class="name"> Welcome <%= user.Name %></li>
