--- a/Views/AddminM.ejs
+++ b/Views/AddminM.ejs
@@ -75,8 +75,8 @@
     </header>
     <nav>
         <ul>
-            <li><a href="Addmin_Users">-> Users.</a></li>
-            <li><a href="Admin_Products_List">-> Products. </a></li>
+            <li><a href="/admin/Addmin_Users">-> Users.</a></li>
+            <li><a href="/admin/Admin_Products_List">-> Products. </a></li>
             <li><a href="#">-> Messages. </a></li>
         </ul>
     </nav>
