--- a/Views/Item.ejs
+++ b/Views/Item.ejs
@@ -197,7 +197,7 @@
                     <h3 class="py-4">Men's Fashion T-Shirt</h3>
                     <h2><%= prod.Price%> LE</h2>
 
-                    <form action="/add_to_cart" method="post" id="add_to_cart">
+                    <form action="/user/add_to_cart" method="post" id="add_to_cart">
                         <select class="se">
                             <option>select Size</option>
                             <option>S</option>
