--- a/Views/partials/Nav.ejs
+++ b/Views/partials/Nav.ejs
@@ -78,28 +78,22 @@ li.name{
         <div>
             <ul id="navbar">
                 <li><a class="home" href="/">Home</a></li>
-                <li><a href="Product">Shop</a></li>
+                <li><a href="/Product">Shop</a></li>
                <% if(user.Type==="admin"){ %>
-               <li> <a href='/AddminM'>Admin</a></li>
+               <li> <a href='/admin/AddminM'>Admin</a></li>
                 <% } %>
 
                 <li><a href="test.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="Contact">Contact</a></li>
-                <li><a href="WishList"><i id="heart" class="far fa-heart"></i></a></li>
-                <li><a href="Cart"><i class="material-icons">shop</i></a></li>
+                <li><a href="/user/WishList"><i id="heart" class="far fa-heart"></i></a></li>
+                <li><a href="/user/Cart"><i class="material-icons">shop</i></a></li>
                 <% if(user ==="" ) { %>
                    <li> <a href='/user/Login2'>Login</a></li>
                     <% } else { %>
-                     <li> <a href='/logout'>Logout</a></li>
+                     <li> <a href='/user/logout'>Logout</a></li>
                      <li class="name"> Welcome <%= user.Name %></li>
                       <% } %>
-                      <li>
-                        <form action="/search" method="GET">
-                            <input type="text" name="query" placeholder="Search products...">
-                            <button type="submit">Search</button>
-                        </form>
-                    </li>
                 </div>
             </ul>
         </div>
