--- a/Views/Add_Product.ejs
+++ b/Views/Add_Product.ejs
@@ -37,7 +37,7 @@
 	<%- include("./partials/Nav.ejs") %>
 	<div class="container">
 		<h1>Add Product</h1>
-		<form id="edit-product-form" method="post" action="/Action_Add_product" enctype="multipart/form-data">
+		<form id="edit-product-form" method="post" action="/admin/Action_Add_product" enctype="multipart/form-data">
 			<div class="form-group">
 				<label for="product-name">Product Name:</label>
 				<input type="text" class="form-control" id="product-name" name="pname" placeholder="Enter product name" required>
