--- a/Views/Cart.ejs
+++ b/Views/Cart.ejs
@@ -278,7 +278,7 @@
             <div onclick="" class="pro">
                 <tr>
                     <td>
-                        <form action="/usser/remove_from_cart" method="post" id="remove_from_cart">
+                        <form action="/user/remove_from_cart" method="post" id="remove_from_cart">
                             <input hidden id="pname" name="pname" value="<%= crt.ProductName%>"></input>
                             <input hidden id="psize" name="psize" value="<%= crt.Size%>"></input>
                             <input value="remove" type="submit" value="<%= crt._id%>"></input>
