--- a/Views/Edit_Users.ejs
+++ b/Views/Edit_Users.ejs
@@ -48,7 +48,7 @@
     <%- include("./partials/Nav.ejs") %>
     <div class="user-edit-sheet">
         <h2>Edit User</h2>
-        <form class="ab" action="/edit/<%= Puser._id %>" method="POST" enctype="multipart/form-data" >
+        <form class="ab" action="/admin/edit/<%= Puser._id %>" method="POST" enctype="multipart/form-data" >
             <div class="form-group">
                 <label for="user-name">Name:</label>
                 <input type="text" id="user-name" name="name" value="<%= Puser.Name %>"   >
